<resources>
    <string name="app_name">webstream</string>

    <!-- TabView (main Activity) -->
    <string name="tab_streams">Streams</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_player">Player</string>
    <string name="tab_history">History</string>


    <string name="service_switch_on">RadioService is Running</string>
    <string name="service_switch_off">RadioService is not Running</string>#

    <!-- Fragments -->
    <string name="text_streams_fragment">Streams</string>
    <string name="text_settings_fragment">Settings</string>

    <!-- Settings -->
    <!-- Autostart Switch -->
    <string name="pref_autostart_enabled_title">Autostart (requires root)</string>
    <string name="pref_autostart_enabled_summary_on">Autostart is enabled</string>
    <string name="pref_autostart_enabled_summary_off">Autostart is disabled</string>
    <string name="pref_autostart_description">Starts the Service (not the app) after cold Boot</string>

    <!-- Delay -->
    <string name="pref_autostart_delay_title">Delay for Starting the Service</string>
    <string name="pref_autostart_delay_summary">Delay in seconds (0–600) from finished boot to start the RadioService</string>

    <!-- Icon Scale Factor -->
    <string name="pref_icon_scale_factor_title">Scale Factor for the Coverflow</string>
    <string name="pref_icon_scale_factor_summary">Set Up the Scale factor for the icons 0-100%</string>

    <!-- AudioFocus -->
    <string name="pref_audiofocus_enabled_title">Audiofocus</string>
    <string name="pref_audiofocus_description">Sets the Audiofocus on the Service</string>
    <!-- AutoPlay and Close -->
    <string name="pref_autoplay_and_close_title">Autoplay and Close</string>
    <string name="pref_autoplay_and_close_description">Autoplays the last played stream after first start of the appa and then minimize after delay</string>
    <string name="pref_autoplay_and_close_delay_title">Delay for Autoclose</string>
    <string name="pref_autoplay_and_close_delay_summary">Delay in seconds (0–30) from play stream to minimize the app</string>
    <!-- AudioFocus -->
    <string name="pref_autoplay_player_enabled_title">Autoplays when UI Player Starts</string>
    <string name="pref_autoplay_player_description">Starts the Streaming after Launch the UI Player</string>
    <!-- Open Girhub -->
    <string name="pref_open_github_repo_title">GitHub Repository</string>
    <string name="pref_open_github_repo_summary">Opens the Github Repository</string>
    <string name="github_repository_url">https://github.com/Planqton/webstream</string>

    <!-- Overwrite Label -->
    <string name="pref_overwrite_label_title">Overwrite label</string>
    <string name="pref_overwrite_label_summary_on">Labels will be overwritten</string>
    <string name="pref_overwrite_label_summary_off">Labels remain unchanged</string>
    <string name="pref_overwrites_description">Overwrites the Meta Label Picture with the Picture from the Setup Stream Station (Icon URL)</string>

    <!-- Toasts -->
    <string name="pref_debug_toast_enabled_title">Show toast messages</string>
    <string name="pref_debug_toast_description">Shows Toast infos for dev.</string>
    <string name="develop_toast_string">Debug:</string>


    <!--Reconnecting Toast -->
    <string name="pref_reconnecting_toast_enabled_title">Reconnecting Toast</string>
    <string name="pref_reconnecting_toast_description">Show Toast when trying to Reconnect to Stream</string>
    <string name="reconnecting_toast_string">Trying to Reconnect... Attempt:</string>
    <!--Buffering Toast -->
    <string name="pref_buffering_toast_enabled_title">Buffering Toast</string>
    <string name="pref_buffering_toast_description">Show Toast when Stream is Buffering</string>
    <string name="buffering_toast_string">Buffering…</string>

    <!--Errormessage Toast -->
    <string name="pref_error_toast_enabled_title">Errormessage Toast</string>
    <string name="pref_error_toast_description">Show Toast when an element Crashes</string>
    <string name="error_toast_string">Error:</string>

    <!--Errormessage Toast -->
    <string name="pref_info_toast_enabled_title">Info Toast</string>
    <string name="pref_info_toast_description">Show Toast when Webstreams wans to tell you an Info</string>
    <string name="info_toast_string">Info:</string>
    <!-- Use LAST FM MediaInfo -->
    <string name="pref_last_fm_media_info_title">Custom MetaInfo / Artwork</string>
    <string name="pref_last_fm_media_info_description">Use Custom Mediainfo (Overwrite Launcher Artwork)</string>

    <string name="pref_last_fm_api_key_title">Last FM Api Key</string>
    <string name="pref_last_fm_api_key_summary">API Key is Needed</string>
    <string name="pref_last_fm_api_key_dialogtitle">Enter Api Key:</string>
    <!-- Autiplay -->
    <string name="pref_autoplay_itle">Autoplay</string>
    <string name="pref_autoplay_description">Autoplay when Player is Loading</string>

    <!-- StreamService -->
        <string name="streaming_service_notification_title">Streaming Service</string>
        <string name="streaming_service_notification_text">Initializing...</string>
        <string name="streaming_service_channel_name">Streaming Service Channel</string>
        <string name="streaming_service_channel_description">Channel for the Streaming Service</string>
        <string name="streaming_service_refresh_playlist_log">🔁 refreshPlaylist() executed via Save button!</string>
        <string name="streaming_service_media_item_changed_log">🔁 MediaItem changed: Index = %1$d</string>
        <string name="streaming_service_timeline_changed_log">📻 Timeline Changed</string>
        <string name="streaming_service_unknown_stream">Unknown Stream</string>
        <string name="streaming_service_error_message">Error playing %1$s: %2$s\n%3$s: %4$s</string>


    <!-- Category -->
    <string name="category_autostart">Autostart</string>
    <string name="category_display">Display</string>
    <string name="category_development">Usefull for Developing</string>
    <string name="category_behaviour">Setup</string>
    <string name="category_metainfologging">Metainfo History</string>
    <!-- Streams Aktivity -->
    <string name="add_stream">Add Stream</string>
    <string name="import_streams">Import from File</string>
    <string name="save_streams">Save Streams</string>
    <string name="export_streams">Export Streams</string>
    <string name="export_success">Export Succesfull</string>
    <string name="export_failed">Export Error</string>
    <string name="no_streams_found">No streams found</string>

    <string name="saved_successfully">Saved Successfully</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="stream_name_hint">Stream Name</string>
    <string name="stream_url_hint">Stream URL</string>
    <string name="icon_url_hint">Icon URL</string>
    <string name="import_success">Streams imported successfully</string>
    <string name="file_empty">File was empty</string>
    <string name="import_failed">Import failed</string>
    <string name="no_file_selected">No file selected</string>
    <!-- Edit and add Dialog -->
    <string name="hint_stream_name">Stream Name</string>
    <string name="hint_stream_url">Stream URL</string>
    <string name="hint_icon_url">Icon URL</string>
    <string name="button_search_logo">Logo suchen</string>
    <string name="button_search_radio_station">Search in Radio Browser API</string>
    <string name="search_radio_station">Search Radio Station</string>
    <string name="search">Search</string>
    <string name="hint_search_station">Enter station name…</string>
    <string name="no_results_found">No results found.</string>
    <!-- Icon Search -->
    <string name="hint_enter_search_term">Suchbegriff eingeben…</string>
    <string name="button_search">Search</string>
    <string name="select_logo">Choose Logo</string>
    <string name="no_logos_found">No Logos Found</string>
    <string name="toast_input_searchtext">Enter Text to search for</string>
    <!-- PreferencesHelper -->
    <string name="log_saved_message">🔄 Log saved: %1$s</string>

    <!-- Player -->
    <string name="unknown_station">Unknown Station</string>
    <string name="now_playing_prefix">Now Playing: </string>
    <string name="title_prefix">Title: </string>
    <string name="artist_prefix">Artist: </string>
    <string name="play_pause">Play/Pause</string>
    <string name="previous">Back</string>
    <string name="next">Forward</string>
    <string name="title_label">Titel:</string>
    <string name="artist_label">Artist:</string>
    <string name="placeholder_dash">–</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="unknown_stream">Unknown Stream</string>
    <string name="manual_log_suffix">(Manual log)</string>
    <string name="playlist_snaphelper_triggered">✅ Playlist reloaded and SnapHelper triggered correctly!</string>



    <!-- Ping -->
    <string name="connectivity_check_url">https://clients3.google.com/generate_204</string>
    <string name="listening_for_connection_string">Waiting for Internet Connection...</string>

    <!-- Toolbar -->
    <string name="toolbar_autoplay_label">Autoplay and Autoclose (On First Start)</string>
    <string name="toolbar_autoplay_enabled">On</string>
    <string name="toolbar_autoplay_disabled">Off</string>
<!-- TrackLog -->
    <string name="pref_auto_log_enabled_title">Auto Log Meta info</string>
    <string name="pref_auto_log_enabled_description">Automaticly logs Every Meta info change, you can later search Playes Tracks if transmitted in metainfo!</string>
    <string name="pref_max_log_age_title">Max Age</string>
    <string name="pref_max_log_age_summary">Maximal Age (Days) of Saved Logs (Stream Logs) !!Max Size is 80000items!! Better Solution in work!</string>
    <string name="filter_time_hint">Enter Search Text (Station Name, Time, Title, Artist?)</string>
    <string name="clear_history">Delete History</string>
    <string name="manual_log">Maunal log</string>


</resources>