<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/editStreamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_stream_name" />

        <EditText
            android:id="@+id/editStreamURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_stream_url" />

        <EditText
            android:id="@+id/editIconURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_icon_url" />

        <ImageView
            android:id="@+id/iconPreview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/buttonSearchLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search_logo" />
        <Button
            android:id="@+id/buttonSearchRadioStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search_radio_station" />

    </LinearLayout>
</ScrollView>
